fixes message input and participants alignment with chat

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -634,9 +634,6 @@ textarea{
 .chat-section{
   display: inline-block;
   height: 456px;
-}
-
-.chat-section{
   width: 100%;
   max-width: 330px;
 }
@@ -658,11 +655,17 @@ textarea{
 @media(max-width: 700px){
   .chat-participants{
     width: 100%;
-    max-width: 330px;
+    max-width: 337px;
     float: none;
     margin: 30px 0 40px 0;
     padding-bottom: 10px;
-    max-height: 456px;;
+    max-height: 456px;
+  }
+
+  .chat-submit{
+    width: 100%;
+    max-width: 400px;
+    margin-left: 2.5px;
   }
 }
 
@@ -671,7 +674,7 @@ textarea{
 }
 
 .chat-submit{
-  max-width: 330px;
+  max-width: 337px;
 }
 
 
